--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta property="og:title" content="社團運作小幫手 Chatbot" />
  <meta property="og:description" content="輸入關鍵字，即時獲得社團場地、器材、活動申請等資訊回覆。" />
- <meta property="og:image" content="https://kegi0712.github.io/logo2.png" />
+ <meta property="og:image" content="https://kegi0712.github.io/chatbot/logo.png" />
  <meta property="og:url" content="https://kegi0712.github.io/chatbot/" />
- <meta name="twitter:card" content="summary_large_image" />
- <meta name="theme-color" content="#a6192e" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="theme-color" content="#a6192e" />
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>社團運作小幫手 Chatbot</title>
